quest-sys/QuEST/QuEST/include/QuEST.h

    
    
/** A logger of QASM instructions 
 *
 * @ingroup type
 * @author Tyson Jones
 */
typedef struct {
    
    char* buffer;       // generated QASM string
    int bufferSize;     // maximum number of chars before overflow
    int bufferFill;     // number of chars currently in buffer
    int isLogging;      // whether gates are being added to buffer
    
} QASMLogger;
/** Represents an array of complex numbers grouped into an array of 
 * real components and an array of coressponding complex components.
 *
 * @ingroup type
 * @author Ania Brown
 */
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
/// \endcond

    

/*
 * public structures
 */
 
 /** Codes for specifying Pauli operators
  *
  * @ingroup type
  * @author Tyson Jones
  */
 enum pauliOpType {PAULI_I=0, PAULI_X=1, PAULI_Y=2, PAULI_Z=3};
/** Represents one complex number.
 *
 * @ingroup type
 * @author Ania Brown
 */
typedef struct Complex
{
    qreal real;
    qreal imag;
} Complex;
/** Represents a 2x2 matrix of complex numbers.
 *
 * In C, a ::ComplexMatrix2 can be initialised by separately specifying 
 * the real and imaginary components as nested arrays. \n
 * For example,
 * ```
 * ComplexMatrix2 m = {
 *     .real = {{1,2}, 
 *              {3,4}},
 *     .imag = {{5,6}, 
 *              {7, 8}}};
 * ```
 * specifies matrix
 * \f[
 *   m = \begin{pmatrix}
 *      1 + 5\,i & 2+6\,i \\
 *      3 + 7\,i & 4+ 8\,i
 *   \end{pmatrix}
 * \f]
 * 
 * @see 
 * - ::ComplexMatrix4
 * - createComplexMatrixN()
 *
 * @ingroup type
 * @author Balint Koczor
 * @author Tyson Jones (doc)
 */
typedef struct ComplexMatrix2
{
    qreal real[2][2];
    qreal imag[2][2];
} ComplexMatrix2;
/** Represents a 4x4 matrix of complex numbers
 *
 * In C, a ::ComplexMatrix4 can be initialised by separately specifying 
 * the real and imaginary components as nested arrays. Note that in C99, a short row 
 * that ends with a 0 with be padded with 0. \n
 * For example, 
 * ```
 * ComplexMatrix4 m = {
 *      .real = {{1,2, 3, 4},
 *               {0},
 *               {5,6,7,8},
 *               {0}},
 *      .imag = {{0},{0},{0},{1,1,1,1}}};
 * ```
 * specifies matrix
 * \f[
 *   m = \begin{pmatrix}
 *      1 & 2 & 3 & 4 \\
 *      0 & 0 & 0 & 0 \\
 *      5 & 6 & 7 & 8 \\
 *      i & i & i & i
 *   \end{pmatrix}
 * \f]
 *
 * @see 
 * - ::ComplexMatrix2
 * - createComplexMatrixN()
 *
 * @ingroup type
 * @author Balint Koczor
 * @author Tyson Jones (doc)
 */
typedef struct ComplexMatrix4
{
    qreal real[4][4];
    qreal imag[4][4];
} ComplexMatrix4;
 
 /** Represents a general 2^N by 2^N matrix of complex numbers.
  *
  * @ingroup type
  * @author Tyson Jones
  */
typedef struct ComplexMatrixN
{
  int numQubits;
  qreal **real;
  qreal **imag;
} ComplexMatrixN;
/** Allocate dynamic memory for a square complex matrix of any size, 
 * which can be passed to functions like multiQubitUnitary() and applyMatrixN().
 *
 * The returned matrix will have dimensions
 * \f[
 *      2^{\text{numQubits}} \times 2^{\text{numQubits}},
 * \f]
 * stored as nested arrays ComplexMatrixN.real and ComplexMatrixN.imag,
 * initialised to zero.
 *
 * Unlike a ::Qureg, the memory of a ::ComplexMatrixN is always stored in RAM, 
 * and non-distributed. Hence, elements can be directly accessed and modified:
 * ```
 * int numQubits = 5;
 * int dim = (1 << numQubits);
 * ComplexMatrixN m = createComplexMatrixN(numQubits);
 *
 * for (int r=0; r<dim; r++) {
 *     for (int c=0; c<dim; c++) {
 *         m.real[r][c] = rand();
 *         m.imag[r][c] = rand();
 *     }
 * }
 * ```
 * \n
 * A ::ComplexMatrixN can be initialised in bulk using initComplexMatrixN(),
 * though this is not C++ compatible.
 * 
 * Like ::ComplexMatrix2 and ::ComplexMatrix4 (which are incidentally stored in the stack), 
 * the returned ::ComplexMatrixN is safe to return from functions.
 *
 * > The ::ComplexMatrixN must eventually be freed using destroyComplexMatrixN(),
 * > since it is created in the dynamic heap. One can instead use getStaticComplexMatrixN()
 * > to create a ComplexMatrixN struct in the stack (which doesn't need to be later destroyed),
 * > though this may cause a stack overflow if the matrix is too large (approx 10+ qubits).
 *
 * @see
 * - destroyComplexMatrixN()
 * - getStaticComplexMatrixN()
 * - initComplexMatrixN()
 * - applyMatrixN()
 * - multiQubitUnitary()
 * - mixMultiQubitKrausMap()
 *
 * @ingroup type
 * @param[in] numQubits the number of qubits of which the returned ComplexMatrixN will correspond
 * @returns a dynamic ComplexMatrixN struct, that is one where the .real and .imag
 *  fields are arrays kept in the heap and must be later destroyed.
 * @throws invalidQuESTInputError()
 * - if \p numQubits <= 0
 * - if the memory was not allocated successfully
 * @author Tyson Jones
 */
ComplexMatrixN createComplexMatrixN(int numQubits);