quest-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.60.1 */

#[doc = " A logger of QASM instructions"]
#[doc = ""]
#[doc = " @ingroup type"]
#[doc = " @author Tyson Jones"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct QASMLogger {
    pub buffer: *mut ::std::os::raw::c_char,
    pub bufferSize: ::std::os::raw::c_int,
    pub bufferFill: ::std::os::raw::c_int,
    pub isLogging: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_QASMLogger() {
    assert_eq!(
        ::std::mem::size_of::<QASMLogger>(),
        24usize,
        concat!("Size of: ", stringify!(QASMLogger))
    );
    assert_eq!(
        ::std::mem::align_of::<QASMLogger>(),
        8usize,
        concat!("Alignment of ", stringify!(QASMLogger))
    );
    fn test_field_buffer() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<QASMLogger>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).buffer) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(QASMLogger),
                "::",
                stringify!(buffer)
            )
        );
    }
    test_field_buffer();
    fn test_field_bufferSize() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<QASMLogger>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).bufferSize) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(QASMLogger),
                "::",
                stringify!(bufferSize)
            )
        );
    }
    test_field_bufferSize();
    fn test_field_bufferFill() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<QASMLogger>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).bufferFill) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(QASMLogger),
                "::",
                stringify!(bufferFill)
            )
        );
    }
    test_field_bufferFill();
    fn test_field_isLogging() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<QASMLogger>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).isLogging) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(QASMLogger),
                "::",
                stringify!(isLogging)
            )
        );
    }
    test_field_isLogging();
}
#[doc = " Represents an array of complex numbers grouped into an array of"]
#[doc = " real components and an array of coressponding complex components."]
#[doc = ""]
#[doc = " @ingroup type"]
#[doc = " @author Ania Brown"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ComplexArray {
    pub real: *mut f64,
    pub imag: *mut f64,
}
#[test]
fn bindgen_test_layout_ComplexArray() {
    assert_eq!(
        ::std::mem::size_of::<ComplexArray>(),
        16usize,
        concat!("Size of: ", stringify!(ComplexArray))
    );
    assert_eq!(
        ::std::mem::align_of::<ComplexArray>(),
        8usize,
        concat!("Alignment of ", stringify!(ComplexArray))
    );
    fn test_field_real() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ComplexArray>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).real) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(ComplexArray),
                "::",
                stringify!(real)
            )
        );
    }
    test_field_real();
    fn test_field_imag() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ComplexArray>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).imag) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(ComplexArray),
                "::",
                stringify!(imag)
            )
        );
    }
    test_field_imag();
}
pub const pauliOpType_PAULI_I: pauliOpType = 0;
pub const pauliOpType_PAULI_X: pauliOpType = 1;
pub const pauliOpType_PAULI_Y: pauliOpType = 2;
pub const pauliOpType_PAULI_Z: pauliOpType = 3;
#[doc = " Codes for specifying Pauli operators"]
#[doc = ""]
#[doc = " @ingroup type"]
#[doc = " @author Tyson Jones"]
pub type pauliOpType = ::std::os::raw::c_uint;
#[doc = " Represents one complex number."]
#[doc = ""]
#[doc = " @ingroup type"]
#[doc = " @author Ania Brown"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Complex {
    pub real: f64,
    pub imag: f64,
}
#[test]
fn bindgen_test_layout_Complex() {
    assert_eq!(
        ::std::mem::size_of::<Complex>(),
        16usize,
        concat!("Size of: ", stringify!(Complex))
    );
    assert_eq!(
        ::std::mem::align_of::<Complex>(),
        8usize,
        concat!("Alignment of ", stringify!(Complex))
    );
    fn test_field_real() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<Complex>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).real) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(Complex),
                "::",
                stringify!(real)
            )
        );
    }
    test_field_real();
    fn test_field_imag() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<Complex>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).imag) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(Complex),
                "::",
                stringify!(imag)
            )
        );
    }
    test_field_imag();
}
#[doc = " Represents a 2x2 matrix of complex numbers."]
#[doc = ""]
#[doc = " In C, a ::ComplexMatrix2 can be initialised by separately specifying"]
#[doc = " the real and imaginary components as nested arrays. \\n"]
#[doc = " For example,"]
#[doc = " ```"]
#[doc = " ComplexMatrix2 m = {"]
#[doc = "     .real = {{1,2},"]
#[doc = "              {3,4}},"]
#[doc = "     .imag = {{5,6},"]
#[doc = "              {7, 8}}};"]
#[doc = " ```"]
#[doc = " specifies matrix"]
#[doc = " \\f["]
#[doc = "   m = \\begin{pmatrix}"]
#[doc = "      1 + 5\\,i & 2+6\\,i \\\\"]
#[doc = "      3 + 7\\,i & 4+ 8\\,i"]
#[doc = "   \\end{pmatrix}"]
#[doc = " \\f]"]
#[doc = ""]
#[doc = " @see"]
#[doc = " - ::ComplexMatrix4"]
#[doc = " - createComplexMatrixN()"]
#[doc = ""]
#[doc = " @ingroup type"]
#[doc = " @author Balint Koczor"]
#[doc = " @author Tyson Jones (doc)"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ComplexMatrix2 {
    pub real: [[f64; 2usize]; 2usize],
    pub imag: [[f64; 2usize]; 2usize],
}
#[test]
fn bindgen_test_layout_ComplexMatrix2() {
    assert_eq!(
        ::std::mem::size_of::<ComplexMatrix2>(),
        64usize,
        concat!("Size of: ", stringify!(ComplexMatrix2))
    );
    assert_eq!(
        ::std::mem::align_of::<ComplexMatrix2>(),
        8usize,
        concat!("Alignment of ", stringify!(ComplexMatrix2))
    );
    fn test_field_real() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ComplexMatrix2>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).real) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(ComplexMatrix2),
                "::",
                stringify!(real)
            )
        );
    }
    test_field_real();
    fn test_field_imag() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ComplexMatrix2>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).imag) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(ComplexMatrix2),
                "::",
                stringify!(imag)
            )
        );
    }
    test_field_imag();
}
#[doc = " Represents a 4x4 matrix of complex numbers"]
#[doc = ""]
#[doc = " In C, a ::ComplexMatrix4 can be initialised by separately specifying"]
#[doc = " the real and imaginary components as nested arrays. Note that in C99, a short row"]
#[doc = " that ends with a 0 with be padded with 0. \\n"]
#[doc = " For example,"]
#[doc = " ```"]
#[doc = " ComplexMatrix4 m = {"]
#[doc = "      .real = {{1,2, 3, 4},"]
#[doc = "               {0},"]
#[doc = "               {5,6,7,8},"]
#[doc = "               {0}},"]
#[doc = "      .imag = {{0},{0},{0},{1,1,1,1}}};"]
#[doc = " ```"]
#[doc = " specifies matrix"]
#[doc = " \\f["]
#[doc = "   m = \\begin{pmatrix}"]
#[doc = "      1 & 2 & 3 & 4 \\\\"]
#[doc = "      0 & 0 & 0 & 0 \\\\"]
#[doc = "      5 & 6 & 7 & 8 \\\\"]
#[doc = "      i & i & i & i"]
#[doc = "   \\end{pmatrix}"]
#[doc = " \\f]"]
#[doc = ""]
#[doc = " @see"]
#[doc = " - ::ComplexMatrix2"]
#[doc = " - createComplexMatrixN()"]
#[doc = ""]
#[doc = " @ingroup type"]
#[doc = " @author Balint Koczor"]
#[doc = " @author Tyson Jones (doc)"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ComplexMatrix4 {
    pub real: [[f64; 4usize]; 4usize],
    pub imag: [[f64; 4usize]; 4usize],
}
#[test]
fn bindgen_test_layout_ComplexMatrix4() {
    assert_eq!(
        ::std::mem::size_of::<ComplexMatrix4>(),
        256usize,
        concat!("Size of: ", stringify!(ComplexMatrix4))
    );
    assert_eq!(
        ::std::mem::align_of::<ComplexMatrix4>(),
        8usize,
        concat!("Alignment of ", stringify!(ComplexMatrix4))
    );
    fn test_field_real() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ComplexMatrix4>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).real) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(ComplexMatrix4),
                "::",
                stringify!(real)
            )
        );
    }
    test_field_real();
    fn test_field_imag() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ComplexMatrix4>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).imag) as usize - ptr as usize
            },
            128usize,
            concat!(
                "Offset of field: ",
                stringify!(ComplexMatrix4),
                "::",
                stringify!(imag)
            )
        );
    }
    test_field_imag();
}
#[doc = " Represents a general 2^N by 2^N matrix of complex numbers."]
#[doc = ""]
#[doc = " @ingroup type"]
#[doc = " @author Tyson Jones"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ComplexMatrixN {
    pub numQubits: ::std::os::raw::c_int,
    pub real: *mut *mut f64,
    pub imag: *mut *mut f64,
}
